# C-Assignment

./: CMakeLists.txt  Receipt.txt  Task1a.c  Task1b.c  Task1c.c  Task1d.c  Task1e.c  Task2a.c  Task2b.c  Task2btest.c  Textfile for 1c).txt  Textfile for 1d).txt
